--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,98 @@
-
-.container{
+.container {
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #121212;
-  color: #FFF;
+  background: linear-gradient(#0000CD, #0000FF, #0000FF);
+  color: #00BFFF;
   padding: 14px;
 }
 
-.title{
+.title {
   margin-bottom: 14px;
 }
 
-.form{
+.form {
   max-width: 600px;
   width: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.input{
+.input {
   margin-bottom: 14px;
   height: 34px;
   border-radius: 4px;
   border: 0;
   padding: 0 8px;
+  background-color: #ADD8E6;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: black;
 }
 
-.textarea{
+.textarea {
   margin-bottom: 14px;
   border-radius: 4px;
   border: 0;
   padding: 8px;
   height: 94px;
   resize: none;
+  background-color: #ADD8E6;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: black;
 }
 
-.button{
-  height: 34px;
+.button {
+  width: 67px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 69px;
   border-radius: 4px;
-  border: 0;
+  border-radius: 10px;
   cursor: pointer;
-  background-color: #0fdbff;
-  font-size: 18px;
+  background-color: #00BFFF;
+  color: #0000CD;
+  background-image: url('../src/img/icons8-mail-64.png');
   transition: background-color, transform 0.8s;
+
 }
 
-.button:hover{
-  background-color: #0fe3ff;
+.button:hover {
+  background-color: #FFFF00;
   transform: scale(1.01);
+}
+
+
+/*  */
+
+
+.cols0 {
+  z-index: 5;
+  background: none;
+  width: 60%;
+}
+
+strong {
+  background: none;
+  color: #00FFFF;
+}
+
+
+.topline {
+
+  position: relative;
+  font-size: 30px;
+  letter-spacing: 5px;
+  color: #00BFFF;
+
+}
+
+.topline::after {
+  position: absolute;
+  content: '';
+  height: 4px;
+  width: 45px;
+  bottom: 10px;
+  background-color: #00BFFF;
 }
